[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mergrave"
version = "0.1.0"
description = "A tiny placeholder library for Mergrave"
authors = [{name = "Mergrave", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.4",
    "hypothesis>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "property: property-based tests that explore randomized inputs",
]

[tool.coverage.run]
branch = true
source = ["mergrave"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A"]

